updated at: 2023-04-25 16:25, 【３Dモデルアクセサリ】 - Golden glasses - - KUYUYU/電脳屋 - BOOTH

--- a/VRChat/17/1139517.html
+++ b/VRChat/17/1139517.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+CZVvIGlN6H2AXTHaR5futnMoRyjLMti4X0imfvDysc="></script>
+    "BYwYWUvKVbx44716W/AOPee6wXhrAIqHnh+L9G0hc6g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Dモデルアクセサリ】 - Golden glasses -","description":"VRC/Unityゲーム当に利用可能なヘッドアクセサリーです。以前製作した（https://skd-noratama.booth.pm/items/930129）を立体で再現して、Shderの設定でリアルタイムで影が変わる様設定している為、存在感が増しています。レンズは反射している風に見える様に設定してあります。\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。","url":"https://booth.pm/ja/items/1139517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1139517/36f9dc1b-726a-447c-bfb1-41fede67105b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+CZVvIGlN6H2AXTHaR5futnMoRyjLMti4X0imfvDysc="></script>
+    nonce="BYwYWUvKVbx44716W/AOPee6wXhrAIqHnh+L9G0hc6g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              499
+                              500
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              499
+                              500
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
