updated at: 2023-04-25 16:25, 【For VRoidβ】Saku*saku シャイニーリップ - 蒼空の下の市場　BOOTH店/aozora no sita no sijou - BOOTH

--- a/VRChat/86/1231386.html
+++ b/VRChat/86/1231386.html
@@ -72,9 +72,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -104,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aDTbvIIfm5Ljq/LSjHKL4P/hk6bmTs9D8OvIpcPKugE="></script>
+    "pvzbgVjnF9iGlyiqhsmrSqg7UxEfG259Xb095MOEQgA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【For VRoidβ】Saku*saku シャイニーリップ","description":"※このアイテムは「VRoid Studio向けテクスチャ」です。\n*This item is a \"Texture Material for VRoid Studio\".\n\n※こちらはβ版で制作したアイテムです。VRoid studio正式版での動作は未確認です。予めご了承の上ご購入をお願い致します。\n*This item was created in the beta version, and we have not confirmed that it works with the official version of VRoid studio. \nPlease be aware of this before purchasing this item.\n\n「VRoidの為のコスメブランド、この春誕生…！」\n\nこれは「VRoid ユーザーの、VRoid から生まれた、すべての女の子のためのコスメブランド」です。\n\nVRoid Studioや、VRoidから出力されたVRMなどの3Dモデルに対応しています。（UVが共通なら、恐らく他形式への変換後も使えると思います）\n\n※ブランドコンセプト上、「女の子モデルへの適用」を想定として調整していますが、男の子モデルもUVは共通のようなので使えるかもしれません。","url":"https://booth.pm/ja/items/1231386","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/cb1b1816-d018-4c58-b349-b7f3c5d8bd2f/i/1231386/765ca5da-257c-46b0-88b8-c27f6ae9ed8d_base_resized.jpg"}
     </script>
@@ -117,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aDTbvIIfm5Ljq/LSjHKL4P/hk6bmTs9D8OvIpcPKugE="></script>
+    nonce="pvzbgVjnF9iGlyiqhsmrSqg7UxEfG259Xb095MOEQgA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -145,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +158,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -202,7 +202,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1231386/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -217,14 +217,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1231386/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
