--- a/VRChat/25/1231125.html
+++ b/VRChat/25/1231125.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I9QCIZ3mv1w4ATYb/RHfVgErVuNqk1ulJvbVtrSbBzM="></script>
+    "mpN64y3euocfK2SNRInE3VWz2siJ/RvQz0EZBw5Cy78="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】ウサギ族","description":"モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。\n\nDinamicBornや表情設定済み、VRchatですぐ使えます。\nまんまるシェーダー1.3を使用しています。\n\nポリゴン数6308。VRchatにおけるアバター評価はgoodです。\n\n\n※免責事項や規約など\n\nそれぞれの国における著作権や人権などに則って使用下さい。\n商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。\n\n問題が起きたら自分で解決してください。相談くらいは気分で乗ります。\n\n\n\n\n","url":"https://booth.pm/ja/items/1231125","offers":{"priceCurrency":"JPY","@type":"Offer","price":"6666"},"image":"https://booth.pximg.net/c/620x620/6cb0c7b0-01b4-4d36-a3ba-4a98a916d181/i/1231125/c97a3391-79f0-4852-9c8b-fbc13fadc7e9_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I9QCIZ3mv1w4ATYb/RHfVgErVuNqk1ulJvbVtrSbBzM="></script>
+    nonce="mpN64y3euocfK2SNRInE3VWz2siJ/RvQz0EZBw5Cy78="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1231125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1231125/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
