--- a/VRChat/81/1229681.html
+++ b/VRChat/81/1229681.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6ort3PSYfFC/TnFUVcQ2Uesp4gVZUbz5Z1GIMGhMde4="></script>
+    "pcOAQmd6i0Isdy7EjALHBFwJebM4OQF6F2T9yKWiHNk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター　パワードスーツ　Avatar3.0対応　VRM同梱","description":"従来のアクチュエーターを使用しない\n特殊素材の人工筋肉で作られたパワードスーツという設定。\n\n貧相な見た目ですが大型トラックを\n発砲スチロールのごとく持ち上げられるほどのパワーを持つ。\n\n◆試着用VRChatワールドあります。\n起動用URLはこちら。\nhttps://vrchat.com/home/launch?worldId=wrld_95558c9f-d703-44f3-aca0-43ad03c2cec8\n\n\n自分のお気に入りの子に着せたり\nあえてそのまま使ったりできます。\n\n高い等身のキャラ用だけじゃなくて5、6等身\n程度のキャラクター用の体系も同梱してます。\nPsdファイルで色変えも簡単です。","url":"https://booth.pm/ja/items/1229681","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1229681/a219c489-cd2c-4901-87dc-48672b55c2cf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6ort3PSYfFC/TnFUVcQ2Uesp4gVZUbz5Z1GIMGhMde4="></script>
+    nonce="pcOAQmd6i0Isdy7EjALHBFwJebM4OQF6F2T9yKWiHNk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229681/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229681/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
