updated at: 2023-04-25 16:26, MOA-002 流星のスピカ ※販売停止中 - マルンのお店 - BOOTH

--- a/VRChat/12/1230312.html
+++ b/VRChat/12/1230312.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EO7Idtk9dzlYu2wZCVHEsshJY2HA7j41USuylMYLQc4="></script>
+    "CTiVpwMEdEMJ4sdrqxqQltb3n7sh7pCju5cuczi5Up0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MOA-002 流星のスピカ ※販売停止中","description":"MOA-002 流星のスピカ\n\nスピカ=クリスノヴァ(Spica=Chrisnova)\n女性 16歳 身長152cm 体重45kg\n漁村に産まれた心優しき少女。ノエルという妹のため冒険者になり、モンスターを狩る事で生計を立てている。\nある日 村を襲った\"深緑の魔獣\"を討伐し、その骨や皮から作った装備を着用している。\n二刀流を得意とし、右手に深緑の魔獣の骨と鱗から作られた剣デーモンスケイルを、左手には刀身を青く染めたマインゴーシュを持ち戦う。\n\n△ポリゴン数24670(合計) マテリアル数11(合計) テクスチャー数8(合計)\n・素体付きです。\n・ボーンの構造はUnityのHumanoidに対応しています。\n・表情やリップシンク、アニメーションが同梱されていて、各種設定済みです。\n・Dynamicboneを使用する事を想定しています(コンポーネント設定済み)。\n\n●内容物\n・FBXデータ6個(メイン、素体のみ、デーモンスケイル、マインゴーシュ、スピカのマフラー、彗星のブローチ)。\n・テクスチャー8枚(PNG)。\n・UV展開図8枚(PNG)。\n・マスクテクスチャー3枚(PNG)。\n・Prefabs入りUnitypackageデータ1個(Prefabsはメインと素体のみの2種類が入っています)。\n・Readme1枚。\n\n●利用規約\n・再配布禁止。\n・自作と偽る行為の禁止。\n・商用利用の禁止。\n・収益を伴うものを含めた動画や画像への映り込みの許可。\n・改変自由。\n・その他、日本の法に反しない行為の許可。\n\n●注意事項\n・本品はVRChatでの使用を想定しています。\n・本品はVRChatにおけるフルトラッキングでの使用には向いておりません。\n・本品に使用されている｢MnMrShader1_3｣の作者は みに様であり、ライセンス(MITライセンス)はReadmeに記載しています。\n・本品を使用した事によるトラブルに関して作者は一切の責任を負いません。\n・何か問題やご不明な点等ございましたら作者までお気軽にご連絡ください。\n\n作者連絡先: https://twitter.com/Marun_Spirit\n\nDynamicbone: https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743","url":"https://booth.pm/ja/items/1230312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1230312/36e3f6b8-f6db-41c0-b338-77d89a47fb53_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EO7Idtk9dzlYu2wZCVHEsshJY2HA7j41USuylMYLQc4="></script>
+    nonce="CTiVpwMEdEMJ4sdrqxqQltb3n7sh7pCju5cuczi5Up0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1230312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1230312/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
