--- a/VRChat/24/1222324.html
+++ b/VRChat/24/1222324.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kNemwBBj0Tg4LYAjuSvtW3/bmn0jhvwFiN/gaQZuPJc="></script>
+    "KicX/bqMdPe4AEyOJ0911Y50pPfBTxWbcpYCMukhW+0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Les Paul Guitar(ギタースタンド付属)","description":"主にVRChatでの利用を想定した、ギターとギタースタンドの3Dモデルです。\nギタースタンドは、シェイプキーで高さを変えることができます。\n[ファイル内容]\n・unitypackage\n　・fbx\n　・prefab\n　・マテリアル\n　・テクスチャ\n\n\n[利用規約]\n・本モデルを購入した時点で、利用規約に同意したものとします。\n・この利用規約は予告なく変更、改変されることがあります。\n・対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nお問い合わせはTwitterアカウント「@Antony_3_」までご連絡ください。\n\n更新履歴\n2019/9/21 ギタースタンドの追加\n2019/8/4 Prefab,fbxのTransformの修正","url":"https://booth.pm/ja/items/1222324","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/e91201ff-4670-41fc-a7fe-d7ae3a0e11e1/i/1222324/6bb3655e-27e1-4840-9450-0304994e8884_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kNemwBBj0Tg4LYAjuSvtW3/bmn0jhvwFiN/gaQZuPJc="></script>
+    nonce="KicX/bqMdPe4AEyOJ0911Y50pPfBTxWbcpYCMukhW+0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222324/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222324/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
