--- a/VRChat/99/1229799.html
+++ b/VRChat/99/1229799.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "C9+YL+P5DKCnfznYzwFU2sAIYluBI2BnozZgI/cMy2U="></script>
+    "8mEkFbSmrH/VDIIh1b2XUViR330udBR+K6tuD1Lzx0c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AF式ビームセイバー","description":"迷宮図書館で司書をしているアンドロイドの少女が愛用している非実体剣。\n出力は抑えられているが、軽量で扱いやすい。\n袖が広がっている服であれば、下腕に固定することで衣服のシルエットを崩さず装着することもできる。\n\n彼女曰く、「高出力なのもよいですが、図書館でおいたする子の\"お仕置き\"にはこれで十分です。それに袖の下に隠しておけばシルエットを崩さずにすみますので。」とのこと。\n","url":"https://booth.pm/ja/items/1229799","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1229799/6b81de10-61d6-42ec-9472-d5e43f4717a7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C9+YL+P5DKCnfznYzwFU2sAIYluBI2BnozZgI/cMy2U="></script>
+    nonce="8mEkFbSmrH/VDIIh1b2XUViR330udBR+K6tuD1Lzx0c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229799/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229799/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
