--- a/VRChat/56/1228956.html
+++ b/VRChat/56/1228956.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "c0PihTA75KPboZc/fJpkA9PRK9cwldg8jVIUXsHwkCo="></script>
+    "TkSeV/Kt8EOvbpVkxQ1slRLzbkyGxrFnsGSzvBIN8Lw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"6_写真立て","description":"縦横どちらでも使用可能です。\nお好みのイラストや写真に置き換えて使用してください。\n\n画像はサンプルとなっており、マテリアル等は付属しておりません。\n\n■ファイル構成\n\n・readme\n・サンプル画像\n・モデルデータ .fbx\n・テクスチャ .psd\n・normal .png","url":"https://booth.pm/ja/items/1228956","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3114deea-0188-440b-baa6-9f46de468b52/i/1228956/f73d6ffe-2b98-46d5-b52a-f4f1029b6b9d_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="c0PihTA75KPboZc/fJpkA9PRK9cwldg8jVIUXsHwkCo="></script>
+    nonce="TkSeV/Kt8EOvbpVkxQ1slRLzbkyGxrFnsGSzvBIN8Lw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1228956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1228956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
