--- a/VRChat/02/1229202.html
+++ b/VRChat/02/1229202.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vnCXQoivxBCt8LFSjiEOCxX1KUeKESOenvdR+dKCwEM="></script>
+    "CVAd+y251VNNwCh5WhxxnL7KXRSPtebkpbUnwZJ3o/A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ツナ缶","description":"ツナ缶の3Dモデルです。\n改変、再配布(再販売は不可)。\nご飯のお供にどうぞ!\n\n商用利用可能範囲\nテクスチャの画像データ以外はご自由に利用してかまいません。\n\n\n禁止事項(必ず目を通してください)\n配布時のデータを改変されていない状態での自作発言\n元データと殆ど判別がつかない状態での自作発言(ツナ缶工房のデータを使用したこと、改変内容の明記した場合可とします)\n宗教、政治目的での使用\n作者本人、特定の団体、個人を攻撃する等の不適切な行為での使用\n\n\n\n違法行為等見つけた際はこちらのダイレクトメッセージからご連絡ください。\nTwitter: @Mk_ZK_mekaziki\n\n\n万が一、ご利用の際に何らかの不都合や物理的、精神的損害が発生したとしても、当サークルは責任を一切負いかねますのでご了承ください。","url":"https://booth.pm/ja/items/1229202","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/9621d774-f7fc-4c10-af8d-ced7213f6324/i/1229202/f9842bfa-5790-43ae-b4e5-d8c50dfb4bc4_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vnCXQoivxBCt8LFSjiEOCxX1KUeKESOenvdR+dKCwEM="></script>
+    nonce="CVAd+y251VNNwCh5WhxxnL7KXRSPtebkpbUnwZJ3o/A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -171,7 +171,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
@@ -186,14 +186,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
