updated at: 2023-04-25 16:28, 島亀 - karasoni - BOOTH

--- a/VRChat/75/1229075.html
+++ b/VRChat/75/1229075.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ETy3F8qBZULHO2YrHzRTNGdTxmfaEdODqewvvMa5lLc="></script>
+    "6okvwC+EAavdz0z87ZMpDsyxpvc+0ARaKgPEp3ae/Qo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"島亀","description":"VRChatとタグがありますが、再配布以外なら基本ご自由にお使いください。\n\n※本アバターは稼働を想定したモデルはありません。\nなので骨も入っていません。\n\n\n\n\n","url":"https://booth.pm/ja/items/1229075","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/521730e0-f768-4371-b0ec-397b8f2b0bb4/i/1229075/589dd743-9dd7-41c4-8ef6-80be1d97400f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ETy3F8qBZULHO2YrHzRTNGdTxmfaEdODqewvvMa5lLc="></script>
+    nonce="6okvwC+EAavdz0z87ZMpDsyxpvc+0ARaKgPEp3ae/Qo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229075/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229075/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
